--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -6,26 +6,46 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE,
+                      message = FALSE,
+                      warning = FALSE)
 ```
 
 ```{r}
-df
+library(tidyverse)
+library(lubridate)
+library(janitor)
+library(tidytext)
+library(hrbrthemes)
 
-df %>% 
+theme_set(theme_bw())
+```
+
+```{r}
+df <- read_csv("output/migration_data_cleaned.csv") %>% 
+  filter(year == 2018)
+
+df
+```
+
+
+```{r}
+df <- df %>% 
   select(state_from, state_to, migration)
 
-df %>% 
-  filter(state_from == state_to) %>% 
-  select(state_from, state_to, migration) %>% 
-  View()
+df
+```
 
+```{r}
 df_states <- df %>% 
   select(state_from, state_to, migration) %>% 
   filter(state_from != state_to) %>%
-  arrange(state_from, state_to) %>%
-  mutate(interstate_flag = str_detect(state_to, "Foreign"))
+  arrange(state_from, state_to)
 
+df_states
+```
+
+```{r}
 df_states %>% 
   filter(state_from %in% c("Pennsylvania", "New York", "Ohio", "Virginia", "West Virginia", "Maryland")) %>%
   mutate(state_to = reorder_within(state_to, migration, state_from)) %>%
@@ -37,10 +57,10 @@ df_states %>%
     facet_wrap(~state_from, scales = "free") +
     scale_y_reordered() +
     scale_x_comma()
+```
 
-df_states %>%
-  distinct(state_from)
 
+```{r}
 df_states %>% 
   group_by(state_to) %>% 
   summarize(migration = sum(migration, na.rm = TRUE)) %>% 
@@ -49,16 +69,4 @@ df_states %>%
   mutate(state_to = fct_reorder(state_to, migration)) %>%
   ggplot(aes(migration, state_to)) +
     geom_col()
-
-df_states %>% 
-  group_by(state_to) %>% 
-  summarize(migration = sum(migration, na.rm = TRUE)) %>% 
-  ungroup() %>% 
-  arrange(desc(migration)) %>% 
-  mutate(state_to = fct_reorder(state_to, migration),
-         rank = row_number()) %>%
-  filter(rank %in% c(1:5, 50:54)) %>%
-  ggplot(aes(migration, state_to)) +
-    geom_col()
 ```
-
