--- a/network_graph.Rmd
+++ b/network_graph.Rmd
@@ -11,6 +11,9 @@ knitr::opts_chunk$set(echo = TRUE,
                       warning = FALSE)
 ```
 
+To do
+* add row for islands
+
 ```{r}
 library(tidyverse)
 library(janitor)
